--- a/README
+++ b/README
@@ -34,3 +34,5 @@ Windows + D 눌러도 최소화다.
 http://gall.dcinside.com/eveonline/212888
 
 https://youtu.be/V8MU_ubtllY
+
+++) 수정사항 : 이브창 최소화 하면 알람 울리는거 빡쳐서 직접 수정했습니다.
