--- a/README
+++ b/README
@@ -15,13 +15,15 @@ DX11 이던 DX9던 지원
 
 Window Mode or Fixed Window 설정
 
-이브창 최소화 하지 않기 
+아래 사항은 수정되었으므로 더 이상 신경쓰지 않으셔도 됩니다. 나 말고 쓸 사람은 없겠지만
 
-최소화 하면 경보기에서 최소화되었다고 빼액거리니까
+  //이브창 최소화 하지 않기 
 
-알텝을 하던 그냥 뒤로 빼놓던 하고 이브창 최소화 하지 말 것
+  //최소화 하면 경보기에서 최소화되었다고 빼액거리니까
 
-Windows + D 눌러도 최소화다.
+  //알텝을 하던 그냥 뒤로 빼놓던 하고 이브창 최소화 하지 말 것
+
+  //Windows + D 눌러도 최소화다.
 
 주의 
  
